// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert correctly throws error given unsupported type 1`] = `"Unsupported alert type=foo"`;

exports[`Alert danger renders properly 1`] = `
<div
  class="alert alert-danger"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert danger renders properly with dismiss button 1`] = `
<div
  class="alert alert-danger alert-dismissable"
>
  <button
    aria-hidden="true"
    class="close close-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-close"
    />
  </button>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert error renders properly 1`] = `
<div
  class="alert alert-danger"
>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert error renders properly with dismiss button 1`] = `
<div
  class="alert alert-danger alert-dismissable"
>
  <button
    aria-hidden="true"
    class="close close-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-close"
    />
  </button>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert info renders properly 1`] = `
<div
  class="alert alert-info"
>
  <span
    aria-hidden="true"
    class="pficon pficon-info"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert info renders properly with dismiss button 1`] = `
<div
  class="alert alert-info alert-dismissable"
>
  <button
    aria-hidden="true"
    class="close close-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-close"
    />
  </button>
  <span
    aria-hidden="true"
    class="pficon pficon-info"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert success renders properly 1`] = `
<div
  class="alert alert-success"
>
  <span
    aria-hidden="true"
    class="pficon pficon-ok"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert success renders properly with dismiss button 1`] = `
<div
  class="alert alert-success alert-dismissable"
>
  <button
    aria-hidden="true"
    class="close close-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-close"
    />
  </button>
  <span
    aria-hidden="true"
    class="pficon pficon-ok"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert warning renders properly 1`] = `
<div
  class="alert alert-warning"
>
  <span
    aria-hidden="true"
    class="pficon pficon-warning-triangle-o"
  />
  <span>
    Alert Message!
  </span>
</div>
`;

exports[`Alert warning renders properly with dismiss button 1`] = `
<div
  class="alert alert-warning alert-dismissable"
>
  <button
    aria-hidden="true"
    class="close close-default"
    type="button"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-close"
    />
  </button>
  <span
    aria-hidden="true"
    class="pficon pficon-warning-triangle-o"
  />
  <span>
    Alert Message!
  </span>
</div>
`;
